# sig

./: .gitignore  Api.hs  DB.hs  DataSource.hs  Ext.hs  Main.hs  Query.hs  README.md  Stocks.hs  Util.hs  sig.cabal  stack.yaml
.mighty/: default.conf  default.route
Api/: Stocks.hs
Ext/: Instances.hs  TH.hs
client/: restsig-client.cabal  stack.yaml
client/src/Restsig/Client/: Brands.hs  Stocks.hs
client/src/Restsig/Client/Stocks/: Indicator.hs
generate/: Main.hs  sig.js
public_html/: index.html
public_html/css/: app.css
public_html/docs/: index.html
public_html/docs/brands/: index.html
public_html/docs/stocks/: index.html
public_html/docs/stocks/indicator/: index.html
public_html/js/: app.css  app.js  jquery-extends.js  sig.js
sig-api/: Api.hs  ApiTypes.hs  Brand.hs  DataSource.hs  Query.hs  Stock.hs  Util.hs
sig-api/Api/: Brand.hs  Indicator.hs  Stock.hs
sig-api/Ext/: Instances.hs  Projectable.hs
sig-api/TechnicalIndicators/: Core.hs  EMA.hs  SMA.hs  WMA.hs
sig-api/Type/: Brand.hs  Common.hs  Stock.hs
sig-api/Type/Stock/: Internal.hs
wai/: Main.hs
