name:                sig
version:             0.1.0.0
synopsis:            Technical analysis for trading
-- description:         
homepage:            https://github.com/cutsea110/sig
license:             BSD3
license-file:        LICENSE
author:              cutsea110
maintainer:          cutsea110@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     LICENSE

library
  exposed-modules:
    Api
    Api.Stock
    DB
    DataSource
    Ext.Instances
    Query
    Stock
  other-extensions:    TemplateHaskell, MultiParamTypeClasses, DeriveGeneric, FlexibleInstances
  build-depends:
                       HDBC-postgresql >=2.3 && <2.4
                     , HDBC-session >=0.1 && <0.2
                     , aeson >=0.7 && <0.8
                     , base >=4.7 && <4.8
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , generic-aeson >=0.2 && <0.3
                     , hxt >=9.3 && <9.4
                     , json-schema >=0.7 && <0.8
                     , mtl >=2.1 && <2.2
                     , names-th >=0.1 && <0.2
                     , persistable-record >=0.1 && <0.2
                     , regex-compat >=0.95 && <0.96
                     , regular >=0.3 && <0.4
                     , regular-xmlpickler >=0.2 && <0.3
                     , relational-query >=0.4 && <0.5
                     , relational-query-HDBC >=0.1 && <0.2
                     , rest-core >=0.34 && <0.35
                     , rest-wai >=0.1 && <0.2
                     , stm >=2.4 && <2.5
                     , text >=1.1 && <1.2
                     , time >=1.4 && <1.5
                     , warp >=3.0 && <3.1
  hs-source-dirs:      sig-api
  default-language:    Haskell2010

executable sig
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      wai
  build-depends:
                       base >=4.7 && <4.8
                     , rest-wai >=0.1 && <0.2
                     , sig
                     , warp >=3.0 && <3.1

executable sig-gen
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      generate
  build-depends:
                       base >=4.7 && <4.8
                     , rest-core >=0.34 && <0.35
                     , rest-gen >=0.16 && <0.17
                     , sig
