name:                sig
version:             0.1.0.0
synopsis:            Technical analysis for trading
-- description:         
homepage:            https://github.com/cutsea110/sig
license:             BSD3
license-file:        LICENSE
author:              cutsea110
maintainer:          cutsea110@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     LICENSE

library
  exposed-modules:
    Api
    Api.Brand
    Api.Indicator
    Api.Stock
    ApiTypes
    DataSource
    Ext.Instances
    Ext.TH
    Query
    Stock
    TechnicalIndicators.Core
    TechnicalIndicators.EMA
    TechnicalIndicators.SMA
    TechnicalIndicators.WMA
    Type.Brand
    Type.Common
    Type.Stock
    Type.Stock.Internal
    Util
  other-extensions:    TemplateHaskell
                     , MultiParamTypeClasses
                     , DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving
  build-depends:
                       HDBC-postgresql >=2.3 && <2.4
                     , HDBC-session >=0.1 && <0.2
                     , HTTP >=4000.2 && <4000.3
                     , aeson >=0.7 && <0.11
                     , base >=4.7 && <4.9
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , generic-aeson >=0.2 && <0.3
                     , generic-xmlpickler >=0.1 && <0.2
                     , hxt >=9.3 && <9.4
                     , json-schema >=0.7 && <0.8
                     , mtl >=2.1 && <2.3
                     , names-th >=0.1 && <0.2
                     , persistable-record >=0.1 && <0.2
                     , regular >=0.3 && <0.4
                     , relational-query >=0.4 && <0.7
                     , relational-query-HDBC >=0.1 && <0.2
                     , rest-core >=0.34 && <0.37
                     , rest-wai >=0.1 && <0.2
                     , safe >=0.3 && <0.4
                     , scientific >=0.3 && <0.4
                     , sql-words >=0.1 && <0.2
                     , stm >=2.4 && <2.5
                     , text >=1.1 && <1.3
                     , time >=1.4 && <1.6
                     , transformers >=0.4 && <0.5
                     , warp >=3.0 && <3.2
  hs-source-dirs:      sig-api
  default-language:    Haskell2010

executable sig
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      wai
  build-depends:
                       base >=4.7 && <4.9
                     , rest-wai >=0.1 && <0.2
                     , sig
                     , warp >=3.0 && <3.2

executable sig-gen
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      generate
  build-depends:
                       base >=4.7 && <4.9
                     , rest-core >=0.34 && <0.37
                     , rest-gen >=0.16 && <0.19
                     , sig
