name: restsig-client
version: 0.1
licenses: BSD3
cabal-version: >=1.8
build-type: Simple
license: UnspecifiedLicense

library
    exposed-modules:
        Restsig.Client.Brands
        Restsig.Client.Stocks
        Restsig.Client.Stocks.Indicator
    hs-source-dirs: src
    build-depends:
        base >=4.8 && <4.9
      , sig >=0.1 && <0.2
      , rest-client >=0.5 && <0.6
      , rest-types >=1.14 && <1.15
